[GTK] Compilation errors when GL is disabled https://bugs.webkit.org/show_bug.cgi?id=200223

Unreviewed, fix build with -DENABLE_OPENGL=OFF.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::createGSTPlayBin):

Canonical link: https://commits.webkit.org/214057@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248009 268f45cc-cd09-0410-ab3c-d52691b4dbfc