Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp
@@ -2432,7 +2432,9 @@ void MediaPlayerPrivateGStreamer::createGSTPlayBin(const URL& url, const String&
         else if (g_str_has_prefix(elementName.get(), "imxvpudecoder"))
             player->m_videoDecoderPlatform = WebKitGstVideoDecoderPlatform::ImxVPU;
 
+#if USE(TEXTURE_MAPPER_GL)
         player->updateTextureMapperFlags();
+#endif
     }), this);
 
     g_signal_connect_swapped(m_pipeline.get(), "source-setup", G_CALLBACK(sourceSetupCallback), this);
